fixed references and index copyediting

--- a/references.bib
+++ b/references.bib
@@ -16,7 +16,7 @@
 
 @misc{language2016,
   author = {{Statistics Canada}},
-  title = {The Aboriginal languages of First Nations people, M\'etis and Inuit},
+  title = {The {A}boriginal languages of {F}irst {N}ations people, {M}\'etis and {I}nuit},
   year = {2016},
   url = {https://www12.statcan.gc.ca/census-recensement/2016/as-sa/98-200-x/2016022/98-200-x2016022-eng.cfm}
 }
@@ -94,10 +94,10 @@
     url = {https://www.R-project.org/},
   }
 
-@misc{tidyversestyleguide,
+@book{tidyversestyleguide,
   year = {2020},
   author = {Hadley Wickham},
-  title = {The tidyverse style guide},
+  title = {The Tidyverse Style Guide},
   url = {https://style.tidyverse.org/}
 }
 
@@ -120,7 +120,7 @@
 
 @article{walker2017,
   author = {Nick Walker},
-  title = {Mapping Indigenous languages in Canada},
+  title = {Mapping indigenous languages in {C}anada},
   journal = {Canadian Geographic},
   year = {2017},
   publisher = {The Royal Canadian Geographical Society},
@@ -143,17 +143,17 @@
     url = {https://upload.wikimedia.org/wikipedia/commons/0/00/Brown_Bluff-2016-Tabarin_Peninsula%E2%80%93Gentoo_penguin_%28Pygoscelis_papua%29_03.jpg}}
 
 @book{children2012,
-  title={They came for the children: Canada, aboriginal peoples, and the residential schools},
+  title={They Came for the Children: Canada, Aboriginal Peoples, and the Residential Schools},
   author={{Truth and Reconciliation Commission of Canada}},
   year={2012},
   publisher = {Public Works \& Government Services Canada}
 }
 
-@misc{calls2015,
-  title={Calls to Action},
+@book{calls2015,
+  title={Calls to {A}ction},
   author={{Truth and Reconciliation Commission of Canada}},
   year={2015},
-  url={http://trc.ca/assets/pdf/Calls_to_Action_English2.pdf}
+  url={https://www2.gov.bc.ca/assets/gov/british-columbians-our-governments/indigenous-people/aboriginal-peoples-documents/calls_to_action_english2.pdf}
 }
 
 @misc{maunadata,
