--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -442,7 +442,7 @@ is beyond the scope of this chapter; but roughly, if your estimated mean is 100,
 error is 1,000, you can expect the *true* RMSPE to be somewhere roughly between 99,000 and 101,000 (although it may
 fall outside this range). You may ignore the other columns in the metrics data frame,
 as they do not provide any additional insight.
-\index{cross validation!collect\_metrics}
+\index{cross-validation!collect\_metrics}
 
 ```{r 07-choose-k-knn-results}
 gridvals <- tibble(neighbors = seq(from = 1, to = 200, by = 3))
