--- a/viz.Rmd
+++ b/viz.Rmd
@@ -203,7 +203,7 @@ curated by [Dr. Pieter Tans, NOAA/GML](https://www.esrl.noaa.gov/gmd/staff/Piete
 and [Dr. Ralph Keeling, Scripps Institution of Oceanography,](https://scrippsco2.ucsd.edu/)
 records the atmospheric concentration of carbon dioxide 
 (CO$_{\text{2}}$, in parts per million) 
-at the Mauna Loa research station in \index{Mauna Loa CO2} Hawaii 
+at the Mauna Loa research station in \index{Mauna Loa} Hawaii 
 from 1959 onward [@maunadata].
 For this book, we are going to focus on the last 40 years of the data set,
 1980-2020.
@@ -665,11 +665,11 @@ to assess a few key characteristics of the data:
 
 - **Direction:** if the y variable tends to increase when the x variable increases, then y has a **positive** relationship with x. If 
   y tends to decrease when x increases, then y has a **negative** relationship with x. If y does not meaningfully increase or decrease 
-  as x increases, then y has **little or no** relationship with x. \index{relationship!positive,negative,none}
+  as x increases, then y has **little or no** relationship with x. \index{relationship!positive, negative, none}
 - **Strength:** if the y variable *reliably* increases, decreases, or stays flat as x increases,
-  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong,weak}
+  then the relationship is **strong**. Otherwise, the relationship is **weak**. Intuitively, \index{relationship!strong, weak}
   the relationship is strong when the scatter points are close together and look more like a "line" or "curve" than a "cloud."
-- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear,nonlinear}
+- **Shape:** if you can draw a straight line roughly through the data points, the relationship is **linear**. Otherwise, it is **nonlinear**. \index{relationship!linear, nonlinear}
 
 In Figure \@ref(fig:03-mother-tongue-vs-most-at-home-scale-props), we see that 
 as the percentage of people who have a language as their mother tongue increases, 
@@ -1335,7 +1335,7 @@ a story:
 Below are two examples of how one might take these four steps in describing the example visualizations that appeared earlier in this chapter.
 Each of the steps is denoted by its numeral in parentheses, e.g. (3).
 
-**Mauna Loa Atmospheric CO$_{\text{2}}$ Measurements:** (1) \index{Mauna Loa CO2} Many 
+**Mauna Loa Atmospheric CO$_{\text{2}}$ Measurements:** (1) \index{Mauna Loa} Many 
 current forms of energy generation and conversion---from automotive
 engines to natural gas power plants---rely on burning fossil fuels and produce
 greenhouse gases, typically primarily carbon dioxide (CO$_{\text{2}}$), as a
