changing plot font size in classification1

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -31,6 +31,8 @@ print_tidymodels <- function(tidymodels_object) {
     }
   }
 }
+
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
 ```
 
 ## Overview 
@@ -236,7 +238,8 @@ perim_concav <- cancer |>
        y = "Concavity (standardized)",
        color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2"))
+                     values = c("orange2", "steelblue2")) +
+  theme(text = element_text(size = 14))
 perim_concav
 ```
 
@@ -1103,7 +1106,8 @@ rare_plot <- rare_cancer |>
        y = "Concavity (standardized)",
        color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2"))
+                     values = c("orange2", "steelblue2")) +
+  theme(text = element_text(size = 14))
 
 rare_plot
 ```
@@ -1398,7 +1402,8 @@ wkflw_plot <-
        x = "Area (standardized)", 
        y = "Smoothness (standardized)") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2"))
+                     values = c("orange2", "steelblue2")) +
+  theme(text = element_text(size = 14))
 
 wkflw_plot
 ```
