changing size of 3d plot

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -616,9 +616,9 @@ scaled_cancer_3 <- bind_rows(cancer, new_obs_3) |>
 plot_3d <- scaled_cancer_3 |>
   plot_ly() |>
   layout(scene = list(
-    xaxis = list(title = "Perimeter"),
-    yaxis = list(title = "Concavity"),
-    zaxis = list(title = "Symmetry")
+    xaxis = list(title = "Perimeter", titlefont = list(size = 14)),
+    yaxis = list(title = "Concavity", titlefont = list(size = 14)),
+    zaxis = list(title = "Symmetry", titlefont = list(size = 14))
   )) |> 
   add_trace(x = ~Perimeter,
             y = ~Concavity,
