changing plot font size in classification2

--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -5,6 +5,7 @@ library(gridExtra)
 library(cowplot)
 library(stringr)
 library(knitr)
+library(ggplot2)
 
 knitr::opts_chunk$set(fig.align = "center")
 
@@ -24,6 +25,9 @@ print_tidymodels <- function(tidymodels_object) {
     }
   }
 }
+
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
+
 ```
 
 ## Overview 
@@ -227,7 +231,8 @@ perim_concav <- cancer |>
   geom_point(alpha = 0.5) +
   labs(color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
-                     values = c("orange2", "steelblue2"))
+                     values = c("orange2", "steelblue2")) + 
+  theme(text = element_text(size = 14))
 
 perim_concav
 ```
@@ -782,7 +787,8 @@ as shown in Figure \@ref(fig:06-find-k).
 accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
-  labs(x = "Neighbors", y = "Accuracy Estimate")
+  labs(x = "Neighbors", y = "Accuracy Estimate") + 
+  theme(text = element_text(size = 14))
 
 accuracy_vs_k
 ```
@@ -839,7 +845,8 @@ accuracies <- knn_results |>
 accuracy_vs_k_lots <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
-  labs(x = "Neighbors", y = "Accuracy Estimate")
+  labs(x = "Neighbors", y = "Accuracy Estimate") + 
+  theme(text = element_text(size = 14))
 
 accuracy_vs_k_lots
 ```
