increasing plot font sizes for clustering

--- a/clustering.Rmd
+++ b/clustering.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(warning = FALSE, fig.align = "default")
 # some graphs with the code shown to students are hard coded 
 cbbPalette <- c(brewer.pal(9, "Paired"))
 cbpalette <- c("darkorange3", "dodgerblue3", "goldenrod1")
+
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
 ```
 
 ## Overview 
@@ -171,7 +173,8 @@ ggplot(data, aes(x = flipper_length_standardized,
                  y = bill_length_standardized)) +
   geom_point() +
   xlab("Flipper Length (standardized)") +
-  ylab("Bill Length (standardized)")
+  ylab("Bill Length (standardized)") + 
+  theme(text = element_text(size = 14))
 ```
 
 Based \index{ggplot}\index{ggplot!geom\_point} on the visualization 
@@ -938,7 +941,8 @@ cluster_plot <- ggplot(clustered_data,
        color = "Cluster") + 
   scale_color_manual(values = c("dodgerblue3",
                                 "darkorange3",  
-                                "goldenrod1"))
+                                "goldenrod1")) + 
+  theme(text = element_text(size = 14))
 
 cluster_plot
 ```
@@ -1040,7 +1044,8 @@ elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
   geom_line() +
   xlab("K") +
   ylab("Total within-cluster sum of squares") +
-  scale_x_continuous(breaks = 1:9)
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 14))
 
 elbow_plot
 ```
@@ -1082,7 +1087,8 @@ elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
   geom_line() +
   xlab("K") +
   ylab("Total within-cluster sum of squares") +
-  scale_x_continuous(breaks = 1:9)
+  scale_x_continuous(breaks = 1:9) + 
+  theme(text = element_text(size = 14))
 
 elbow_plot
 ```
