adding ggplot2 to packages in setup

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -7,6 +7,7 @@ library(knitr)
 library(kableExtra)
 library(ggpubr)
 library(stringr)
+library(ggplot2)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       fig.align = "center")
