increasing font size of regression1

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -24,6 +24,7 @@ print_tidymodels <- function(tidymodels_object) {
     }
   }
 }
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
 ```
 
 ## Overview 
@@ -148,7 +149,8 @@ eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   geom_point(alpha = 0.4) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
-  scale_y_continuous(labels = dollar_format())
+  scale_y_continuous(labels = dollar_format()) + 
+  theme(text = element_text(size = 14))
 
 eda
 ```
@@ -203,7 +205,8 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_vline(xintercept = 2000, linetype = "dotted")
+  geom_vline(xintercept = 2000, linetype = "dotted") + 
+  theme(text = element_text(size = 14))
 
 small_plot
 ```
@@ -657,7 +660,8 @@ plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  ggtitle(paste0("K = ", kmin))
+  ggtitle(paste0("K = ", kmin)) + 
+  theme(text = element_text(size = 14))
 
 plot_final
 ```
@@ -691,9 +695,11 @@ to help predict the sale price of a house.
 
 ```{r 07-bedscatter, fig.height = 3.5, fig.width = 4.5, fig.cap = "Scatter plot of the sale price of houses versus the number of bedrooms."}
 plot_beds <- sacramento |>
-             ggplot(aes(x = beds, y = price)) +
-             geom_point(alpha = 0.4) +
-             labs(x = 'Number of Bedrooms', y = 'Price (USD)')
+  ggplot(aes(x = beds, y = price)) +
+  geom_point(alpha = 0.4) + 
+  labs(x = 'Number of Bedrooms', y = 'Price (USD)') + 
+  theme(text = element_text(size = 14))
+
 plot_beds
 ```
 
