increasing plot font size of regression2

--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -24,6 +24,8 @@ print_tidymodels <- function(tidymodels_object) {
     }
   }
 }
+
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
 ```
 
 ## Overview 
@@ -297,7 +299,8 @@ lm_plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
-  geom_smooth(method = "lm", se = FALSE)
+  geom_smooth(method = "lm", se = FALSE) + 
+  theme(text = element_text(size = 14))
 
 lm_plot_final
 ```
