--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -1176,9 +1176,9 @@ Best subset selection is applicable to any classification method ($K$-NN or othe
 However, it becomes very slow when you have even a moderate
 number of predictors to choose from (say, around 10). This is because the number of possible predictor subsets
 grows very quickly with the number of predictors, and you have to train the model (itself
-a slow process!) for each one. For example, if we have $2$ predictors---let's call
-them A and B---then we have 3 variable sets to try: A alone, B alone, and finally A
-and B together. If we have $3$ predictors---A, B, and C---then we have 7
+a slow process!) for each one. For example, if we have $2$ predictors&mdash;let's call
+them A and B&mdash;then we have 3 variable sets to try: A alone, B alone, and finally A
+and B together. If we have $3$ predictors&mdash;A, B, and C&mdash;then we have 7
 to try: A, B, C, AB, BC, AC, and ABC. In general, the number of models
 we have to train for $m$ predictors is $2^m-1$; in other words, when we 
 get to $10$ predictors we have over *one thousand* models to train, and 
