--- a/reading.Rmd
+++ b/reading.Rmd
@@ -810,10 +810,10 @@ directly from what a website displays is called \index{web scraping}
 information manually is a painstaking and error-prone process, especially when
 there is a lot of information to gather. So instead of asking your browser to
 translate the information that the web server provides into something you can
-see, you can collect that data programmatically---in the form of
+see, you can collect that data programmatically&mdash;in the form of
 **h**yper**t**ext **m**arkup **l**anguage 
 (HTML) \index{hypertext markup language|see{HTML}}\index{cascading style sheet|see{CSS}}\index{CSS}\index{HTML} 
-and **c**ascading **s**tyle **s**heet (CSS) code---and process it 
+and **c**ascading **s**tyle **s**heet (CSS) code&mdash;and process it 
 to extract useful information. HTML provides the
 basic structure of a site and tells the webpage how to display the content
 (e.g., titles, paragraphs, bullet lists etc.), whereas CSS helps style the
@@ -921,8 +921,8 @@ take a look at another line of the source snippet above:
 
 It's yet another price for an apartment listing, and the tags surrounding it
 have the `"result-price"` class. Wonderful! Now that we know what pattern we
-are looking for---a dollar amount between opening and closing tags that have the
-`"result-price"` class---we should be able to use code to pull out all of the 
+are looking for&mdash;a dollar amount between opening and closing tags that have the
+`"result-price"` class&mdash;we should be able to use code to pull out all of the 
 matching patterns from the source code to obtain our data. This sort of "pattern"
 is known as a *CSS selector* (where CSS stands for **c**ascading **s**tyle **s**heet).
 
@@ -1063,7 +1063,7 @@ population_nodes <- html_nodes(page, selectors)
 head(population_nodes)
 ```
 
-Next we extract the meaningful data---in other words, we get rid of the HTML code syntax and tags---from 
+Next we extract the meaningful data&mdash;in other words, we get rid of the HTML code syntax and tags&mdash;from 
 the nodes using the `html_text`
 function. In the case of the example
 node above, `html_text` function returns `"London"`.
@@ -1090,7 +1090,7 @@ Rather than posting a data file at a URL for you to download, many websites thes
 provide an API \index{API} that must be accessed through a programming language like R. The benefit of this
 is that data owners have much more control over the data they provide to users. However, unlike
 web scraping, there is no consistent way to access an API across websites. Every website typically
-has its own API designed especially for its own use-case. Therefore we will just provide one example
+has its own API designed especially for its own use case. Therefore we will just provide one example
 of accessing data through an API in this book, with the hope that it gives you enough of a basic
 idea that you can learn how to use another API if needed.
 
@@ -1120,8 +1120,8 @@ knitr::include_graphics("img/tidyverse_twitter.png")
 When you access an API, you are initiating a transfer of data from a web server
 to your computer. Web servers are expensive to run and do not have infinite resources.
 If you try to ask for *too much data* at once, you can use up a huge amount of the server's bandwidth. 
-If you try to ask for data *too frequently*---e.g., if you 
-make many requests to the server in quick succession---you can also bog the server down and make
+If you try to ask for data *too frequently*&mdash;e.g., if you 
+make many requests to the server in quick succession&mdash;you can also bog the server down and make
 it unable to talk to anyone else. Most servers have mechanisms to revoke your access if you are not
 careful, but you should try to prevent issues from happening in the first place by being extra careful
 with how you write and run your code. You should also keep in mind that when a website owner
@@ -1195,7 +1195,7 @@ tidyverse_tweets
 If you look back up at the image of the Tidyverse Twitter page, you will
 recognize the text of the most recent few tweets in the above data frame.  In
 other words, we have successfully created a small data set using the Twitter
-API---neat! This data is also quite different from what we obtained from web scraping;
+API&mdash;neat! This data is also quite different from what we obtained from web scraping;
 it is already well-organized into a `tidyverse` data frame (although not *every* API
 will provide data in such a nice format).
  From this point onward, the `tidyverse_tweets` data frame is stored on your
