--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -39,7 +39,7 @@ use `tidymodels` workflows, we will use a K-nearest neighbors (KNN)
 approach to make predictions, and we will use cross-validation to choose K.
 Because of how similar these procedures are, make sure to read Chapters
 \@ref(classification) and \@ref(classification2) before reading 
-this one---we will move a little bit faster here with the
+this one&mdash;we will move a little bit faster here with the
 concepts that have already been covered.
 This chapter will primarily focus on the case where there is a single predictor, 
 but the end of the chapter shows how to perform
@@ -69,7 +69,7 @@ The variable that you want to predict is often called the *response variable*. \
 For example, we could try to use the number of hours a person spends on
 exercise each week to predict their race time in the annual Boston marathon. As 
 another example, we could try to use the size of a house to
-predict its sale price. Both of these response variables---race time and sale price---are 
+predict its sale price. Both of these response variables&mdash;race time and sale price&mdash;are 
 numerical, and so predicting them given past data is considered a regression problem.
 
 Just like in the \index{classification!comparison to regression} 
@@ -91,8 +91,8 @@ choices of model parameters (e.g., K in a K-nearest neighbors model). The major 
 is that we are now predicting numerical variables instead of categorical variables.
 
 > **Note:** You can usually tell whether a \index{categorical variable}\index{numerical variable}
-> variable is numerical or categorical---and therefore whether you
-> need to perform regression or classification---by taking two response variables X and Y from your
+> variable is numerical or categorical&mdash;and therefore whether you
+> need to perform regression or classification&mdash;by taking two response variables X and Y from your
 > data, and asking the question, "is response variable X *more* than response variable Y?"
 > If the variable is categorical, the question will make no sense (Is blue more than red?
 > Is benign more than malignant?). If the variable is numerical, it will make sense
