--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -27,8 +27,8 @@ print_tidymodels <- function(tidymodels_object) {
 ```
 
 ## Overview 
-Up to this point, we have solved all of our predictive problems---both classification
-and regression---using K-nearest neighbors (KNN)-based approaches. In the context of regression, 
+Up to this point, we have solved all of our predictive problems&mdash;both classification
+and regression&mdash;using K-nearest neighbors (KNN)-based approaches. In the context of regression, 
 there is another method commonly used 
 in scientific disciplines known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
@@ -52,7 +52,7 @@ While the method is simple and easy to understand, KNN regression does not
 predict well beyond the range of the predictors in the training data, and
 the method gets significantly slower as the training data set grows.
 \index{regression!linear}
-Fortunately, there is an alternative to KNN regression---*linear regression*---that addresses
+Fortunately, there is an alternative to KNN regression&mdash;*linear regression*&mdash;that addresses
 both of these limitations. Linear regression is also much more commonly used in practice, especially
 in scientific applications, because it provides an interpretable mathematical equation that describes
 the relationship between the predictor and response variables. In this first part of the chapter, we will focus on *simple* linear regression,
@@ -69,7 +69,7 @@ straight line of best fit through the training data and then
 > **Note:** Although we did not cover it in earlier chapters, there 
 > is another popular method for classification called *logistic
 > regression* (it is used for classification even though the name, somewhat confusingly,
-> has the word "regression" in it). In logistic regression---similar to linear regression---you
+> has the word "regression" in it). In logistic regression&mdash;similar to linear regression&mdash;you
 > "fit" the model to the training data and then "look up" the prediction for each new observation.
 > Logistic regression and KNN classification have an advantage/disadvantage comparison 
 > similar to that of linear regression and KNN
@@ -82,7 +82,7 @@ how to apply linear regression and compare it to KNN regression. For now, we
 will consider 
 a smaller version of the housing data to help make our visualizations clear.
 Recall our predictive question: can we use the size of a house in the Sacramento, CA area to predict
-its sale price? \index{question!regression} In particular, recall that we have come across a new 2,000-square foot house we are interested
+its sale price? \index{question!regression} In particular, recall that we have come across a new 2,000 square-foot house we are interested
 in purchasing with an advertised list price of
 \$350,000. Should we offer the list price, or is that over/undervalued?
 To answer this question using simple linear regression, we use the data we have
@@ -123,7 +123,7 @@ where
 
 Therefore using the data to find the line of best fit is equivalent to finding coefficients 
 $\beta_0$ and $\beta_1$ that *parametrize* (correspond to) the line of best fit.
-Now of course, in this particular problem, the idea of a 0-square-foot house is a bit silly;
+Now of course, in this particular problem, the idea of a 0 square-foot house is a bit silly;
 but you can think of $\beta_0$ here as the "base price," and 
 $\beta_1$ as the increase in price for each square foot of space.
 Let's push this thought even further: what would happen in the equation for the line if you 
@@ -140,7 +140,7 @@ above to evaluate the predicted sale price given the value we have for the
 predictor variable&mdash;here 2,000 square feet. Figure
 \@ref(fig:08-lin-reg2) demonstrates this process.
 
-```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Scatter plot of sale price versus size with line of best fit and a red dot at the predicted sale price for a 2000 square foot home."}
+```{r 08-lin-reg2, message = FALSE, warning = FALSE, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.cap = "Scatter plot of sale price versus size with line of best fit and a red dot at the predicted sale price for a 2,000 square-foot home."}
 small_model <- lm(price ~ sqft, data = small_sacramento)
 prediction <- predict(small_model, data.frame(sqft = 2000))
 
@@ -162,7 +162,7 @@ small_plot +
 ```
 
 By using simple linear regression on this small data set to predict the sale price
-for a 2,000 square foot house, we get a predicted value of 
+for a 2,000 square-foot house, we get a predicted value of 
 \$`r format(round(prediction[[1]]), big.mark=",", nsmall=0, scientific = FALSE)`. But wait a minute...how
 exactly does simple linear regression choose the line of best fit? Many
 different lines could be drawn through the data points. 
@@ -806,7 +806,7 @@ the only option is to obtain measurements of more useful variables.
 There are, however, a wide variety of cases where the predictor variables do have a 
 meaningful relationship with the response variable, but that relationship does not fit
 the assumptions of the regression method you have chosen. For example, a data frame `df`
-with two variables---`x` and `y`---with a nonlinear relationship between the two variables
+with two variables&mdash;`x` and `y`&mdash;with a nonlinear relationship between the two variables
 will not be fully captured by simple linear regression, as shown in Figure \@ref(fig:08-predictor-design).
 
 ```{r 08-predictor-design-df, echo = FALSE, message = FALSE, warning = FALSE}
@@ -863,8 +863,8 @@ The process of
 transforming predictors (and potentially combining multiple predictors in the process)
 is known as *feature engineering*. \index{feature engineering|see{predictor design}} In real data analysis
 problems, you will need to rely on
-a deep understanding of the problem---as well as the wrangling tools 
-from previous chapters---to engineer useful new features that improve
+a deep understanding of the problem&mdash;as well as the wrangling tools 
+from previous chapters&mdash;to engineer useful new features that improve
 predictive performance.
 
 > **Note:** Feature engineering
