updating plot font sizes for inference

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -20,6 +20,8 @@ min_x <- function(dist) {
   ggp_data <- ggplot_build(dist)
   min(ggp_data$data[[1]]$xmin)
 }
+
+theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
 ```
 
 ## Overview
@@ -291,7 +293,8 @@ sampling distribution directly for learning purposes.
 sampling_distribution <- ggplot(sample_estimates, aes(x = sample_proportion)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey", bins = 12) +
   ylab("Count") +
-  xlab("Sample proportions")
+  xlab("Sample proportions") +
+  theme(text = element_text(size = 14))
 
 sampling_distribution
 ```
@@ -339,7 +342,8 @@ options(pillar.sigfig = 5)
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night (Canadian dollars)")
+  xlab("Price per night (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 population_distribution
 ```
@@ -384,7 +388,8 @@ of our sample.
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night (Canadian dollars)")
+  xlab("Price per night (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 sample_distribution
 
@@ -432,7 +437,8 @@ sample_estimates
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Sample mean price per night (Canadian dollars)")
+  xlab("Sample mean price per night (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 sampling_distribution_40
 ```
@@ -779,7 +785,8 @@ one_sample
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night (Canadian dollars)")
+  xlab("Price per night (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 one_sample_dist
 ```
@@ -805,7 +812,8 @@ boot1 <- one_sample |>
 boot1_dist <- ggplot(boot1, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") + 
-  xlab("Price per night (Canadian dollars)")
+  xlab("Price per night (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 boot1_dist
 
@@ -846,7 +854,8 @@ ggplot(six_bootstrap_samples, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night (Canadian dollars)") +
   ylab("Count") + 
-  facet_wrap(~replicate)
+  facet_wrap(~replicate) +
+  theme(text = element_text(size = 14))
 ```
 
 We see in Figure \@ref(fig:11-bootstrapping-six-bootstrap-samples) how the
@@ -876,7 +885,8 @@ tail(boot20000_means)
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night \n (Canadian dollars)") 
+  xlab("Sample mean price per night \n (Canadian dollars)") +
+  theme(text = element_text(size = 14))
 
 boot_est_dist
 ```
