--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -11,10 +11,16 @@ and as such, contributed greatly to the broad structure and
 list of topics in this book. We would especially like to thank Matías
 Salibían-Barrera for his mentorship during the initial development and roll-out
 of both DSCI 100 and this book. His door was always open when
-we needed to chat about how to
-best introduce and teach data science to our first-year students.
+we needed to chat about how to best introduce and teach data science to our first-year students.
 
-We also owe a debt of gratitude to all of the students of DSCI 100 over the past
+We would also like to thank all those who contributed to the process of 
+publishing this book. In particular, we would like to give special thanks
+to Jim Zidek&mdash;for ...&mdash; and to our reviewers Greg Wilson, Emily Riederer, 
+Rohan Alexander, and ... for their
+insightful feedback and suggestions that resulted in quite substantial improvements to
+the manuscript. 
+
+Finally, we owe a debt of gratitude to all of the students of DSCI 100 over the past
 few years. They provided invaluable feedback on the book and worksheets; 
 they found bugs for us (and stood by very patiently in class while 
 we frantically fixed those bugs); and they brought a level of enthusiasm to the class
