note that... in wrangling edited

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1394,10 +1394,10 @@ Let's again find the maximum value of each column of the
 `map` takes two arguments: 
 an object (a vector, data frame or list) that you want to apply the function to, 
 and the function that you would like to apply to each column.
-
 Note that `map` does not have an argument 
 to specify *which* columns to apply the function to.
-Therefore, we will do this before calling `map` using the `select` function.
+Therefore, we will use the `select` function before calling `map`
+to choose the columns for which we want the maximum.
 
 ``` {r 02-map}
 region_lang |>
