our -> the in a lot of places, some minor typos

--- a/reading.Rmd
+++ b/reading.Rmd
@@ -758,8 +758,8 @@ Databases are beneficial in a large-scale setting:
 - They provide security and data access control.
 - They allow multiple users to access data simultaneously and remotely without conflicts and errors.
   For example, [there are billions of Google searches conducted daily](https://www.internetlivestats.com/google-search-statistics/). 
-  Can you imagine if Google stored all of the data from those searches in a single `.csv
-  file`!? Chaos would ensue! 
+  Can you imagine if Google stored all of the data from those searches in a single `.csv` file!? 
+  Chaos would ensue! 
 
 ## Writing data from R to a `.csv` file
 
