tidyverse typeset consistency

--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1635,13 +1635,12 @@ found in Chapter \@ref(move-to-your-own-machine).
     functions, we recommend you check out [this
     chapter](http://stat545.com/block010_dplyr-end-single-table.html#where-were-we)
     of the data wrangling, exploration, and analysis with R book.
-  - The [`dplyr` page on the tidyverse website](https://dplyr.tidyverse.org/) is
+  - The [`dplyr` page on the Tidyverse website](https://dplyr.tidyverse.org/) is
     another resource to learn more about the functions in this
     chapter, the full set of arguments you can use, and other related functions.
     The site also provides a very nice cheat sheet that summarizes many of the
     data wrangling functions from this chapter.
-  - Check out the [tidyselect
-    page](https://tidyselect.r-lib.org/reference/select_helpers.html) for a
+  - Check out the [`tidyselect` page](https://tidyselect.r-lib.org/reference/select_helpers.html) for a
     comprehensive list of `select` helpers.
   - [*R for Data Science*](https://r4ds.had.co.nz/) has a few chapters related to
     data wrangling that go into more depth than this book. For example, the
@@ -1658,7 +1657,7 @@ found in Chapter \@ref(move-to-your-own-machine).
     loop](https://r4ds.had.co.nz/iteration.html#iteration).
   - There are many `select` helpers that can be used to efficiently subset 
     columns in a data frame when paired with the `select` function, 
-    or other functions that also use the tidy select syntax for column selection 
+    or other functions that also use the `tidyselect` syntax for column selection 
     (e.g., `pivot-longer`). 
     The [documentation for `select` helpers](https://tidyselect.r-lib.org/reference/select_helpers.html) 
     is a useful reference to find the helper you need for your particular problem.
