--- a/regression2.Rmd
+++ b/regression2.Rmd
@@ -29,8 +29,7 @@ print_tidymodels <- function(tidymodels_object) {
 ## Overview 
 Up to this point, we have solved all of our predictive problems---both classification
 and regression---using K-nearest neighbors (KNN)-based approaches. In the context of regression, 
-there is another method commonly used 
-in scientific disciplines known as *linear regression*. This chapter provides an introduction
+there is another commonly used method known as *linear regression*. This chapter provides an introduction
 to the basic concept of linear regression, shows how to use `tidymodels` to perform linear regression in R,
 and characterizes its strengths and weaknesses compared to KNN regression. The focus is, as usual,
 on the case where there is a single predictor and single response variable of interest; but the chapter
@@ -53,8 +52,8 @@ predict well beyond the range of the predictors in the training data, and
 the method gets significantly slower as the training data set grows.
 \index{regression!linear}
 Fortunately, there is an alternative to KNN regression---*linear regression*---that addresses
-both of these limitations. Linear regression is also much more commonly used in practice, especially
-in scientific applications, because it provides an interpretable mathematical equation that describes
+both of these limitations. Linear regression is also very commonly 
+used in practice because it provides an interpretable mathematical equation that describes
 the relationship between the predictor and response variables. In this first part of the chapter, we will focus on *simple* linear regression,
 which involves only one predictor variable and one response variable; later on, we will consider
  *multivariable* linear regression, which involves multiple predictor variables.
