--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -14,11 +14,11 @@ of both DSCI 100 and this book. His door was always open when
 we needed to chat about how to best introduce and teach data science to our first-year students.
 
 We would also like to thank all those who contributed to the process of 
-publishing this book. In particular, we would like to give special thanks
-to Jim Zidek&mdash;for ...&mdash; and to our reviewers Greg Wilson, Emily Riederer, 
-Rohan Alexander, and ... for their
-insightful feedback and suggestions that resulted in quite substantial improvements to
-the manuscript. 
+publishing this book. In particular, we would like to thank all of our reviewers
+for their feedback and suggestions; the book was improved substantially
+by their insights. We would like to give special thanks to Jim Zidek
+for his support and encouragement throughout the process, and to
+Roger Peng for graciously offering to write the foreword.
 
 Finally, we owe a debt of gratitude to all of the students of DSCI 100 over the past
 few years. They provided invaluable feedback on the book and worksheets; 
