adding dpi 300 to setup chunk

--- a/preface-text.Rmd
+++ b/preface-text.Rmd
@@ -4,6 +4,8 @@ library(forcats)
 # read canlang data from GitHub and place it in the data directory
 can_lang <- readr::read_csv("https://github.com/ttimbers/canlang/raw/master/inst/extdata/can_lang.csv") %>%
   readr::write_csv("data/can_lang.csv")
+
+knitr::opts_chunk$set(dpi=300)
 ```
 
 # Preface {-}
