--- a/viz.Rmd
+++ b/viz.Rmd
@@ -8,7 +8,7 @@ library(kableExtra)
 library(magick)
 
 
-knitr::opts_chunk$set(fig.align = "center")
+knitr::opts_chunk$set(fig.align = "center", dpi = 300)
 ```
 
 ## Overview 
