--- a/intro.Rmd
+++ b/intro.Rmd
@@ -6,7 +6,7 @@
 library(magick)
 
 # set as default because for some reason it breaks the pdf in this chapter
-knitr::opts_chunk$set(fig.align = "default", dpi=300)
+knitr::opts_chunk$set(fig.align = "default")
 ```
 
 ## Overview
