--- a/reading.Rmd
+++ b/reading.Rmd
@@ -5,7 +5,7 @@ library(magick)
 library(magrittr)
 library(knitr)
 knitr::opts_chunk$set(message = FALSE,
-                      fig.align = "center", dpi = 300)
+                      fig.align = "center")
 ```
 
 ## Overview 
