--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -7,7 +7,7 @@ library(canlang)
 library(cowplot)
 
 # set as default because for some reason it breaks the pdf in this chapter
-knitr::opts_chunk$set(fig.align = "default", dpi = 300)
+knitr::opts_chunk$set(fig.align = "default")
 ```
 
 ## Overview
