--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -24,7 +24,7 @@ print_tidymodels <- function(tidymodels_object) {
     }
   }
 }
-theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
+theme_update(axis.title = element_text(size = 12)) # modify axis label size in plots 
 ```
 
 ## Overview 
@@ -150,7 +150,7 @@ eda <- ggplot(sacramento, aes(x = sqft, y = price)) +
   xlab("House size (square feet)") +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 eda
 ```
@@ -206,7 +206,7 @@ small_plot <- ggplot(small_sacramento, aes(x = sqft, y = price)) +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   geom_vline(xintercept = 2000, linetype = "dotted") + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 small_plot
 ```
@@ -525,8 +525,8 @@ for (i in 1:6) {
         scale_y_continuous(labels = dollar_format()) +
         geom_line(data = sacr_preds, aes(x = sqft, y = .pred), color = "blue") +
         ggtitle(paste0("K = ", gridvals[[i]])) +
-  theme(text = element_text(size = 16))
-  } else {
+        theme(text = element_text(size = 20), axis.title=element_text(size=20))
+      } else {
       plots[[i]] <- ggplot(sacr_preds, aes(x = sqft, y = price)) +
         geom_point(alpha = 0.4) +
         xlab("House size (square feet)") +
@@ -537,7 +537,7 @@ for (i in 1:6) {
                    yintercept = mean(sacr_preds$price), 
                    color = "blue") +
         ggtitle(paste0("K = ", gridvals[[i]])) +
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 20), axis.title=element_text(size=20)) 
   }
 }
 
@@ -661,7 +661,7 @@ plot_final <- ggplot(sacramento_train, aes(x = sqft, y = price)) +
   ylab("Price (USD)") +
   scale_y_continuous(labels = dollar_format()) +
   ggtitle(paste0("K = ", kmin)) + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 plot_final
 ```
@@ -698,7 +698,7 @@ plot_beds <- sacramento |>
   ggplot(aes(x = beds, y = price)) +
   geom_point(alpha = 0.4) + 
   labs(x = 'Number of Bedrooms', y = 'Price (USD)') + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 plot_beds
 ```
