--- a/classification2.Rmd
+++ b/classification2.Rmd
@@ -26,7 +26,7 @@ print_tidymodels <- function(tidymodels_object) {
   }
 }
 
-theme_update(axis.title = element_text(size = 14)) # modify axis label size in plots 
+theme_update(axis.title = element_text(size = 12)) # modify axis label size in plots 
 
 ```
 
@@ -232,7 +232,7 @@ perim_concav <- cancer |>
   labs(color = "Diagnosis") +
   scale_color_manual(labels = c("Malignant", "Benign"), 
                      values = c("orange2", "steelblue2")) + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 perim_concav
 ```
@@ -788,7 +788,7 @@ accuracy_vs_k <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
   labs(x = "Neighbors", y = "Accuracy Estimate") + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 accuracy_vs_k
 ```
@@ -846,7 +846,7 @@ accuracy_vs_k_lots <- ggplot(accuracies, aes(x = neighbors, y = mean)) +
   geom_point() +
   geom_line() +
   labs(x = "Neighbors", y = "Accuracy Estimate") + 
-  theme(text = element_text(size = 14))
+  theme(text = element_text(size = 12))
 
 accuracy_vs_k_lots
 ```
@@ -926,7 +926,7 @@ for (i in 1:length(ks)) {
     ggtitle(paste("K = ", ks[[i]])) +
     scale_color_manual(labels = c("Malignant", "Benign"), 
                        values = c("orange2", "steelblue2"))  +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 18), axis.title=element_text(size=18)) 
   }
 
 p_no_legend <- lapply(plots, function(x) x + theme(legend.position = "none"))
@@ -1036,7 +1036,7 @@ variables there are, the more (random) influence they have, and the more they
 corrupt the set of nearest neighbors that vote on the class of the new
 observation to predict.  
 
-```{r 06-performance-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "60%", fig.cap = "Effect of inclusion of irrelevant predictors."}
+```{r 06-performance-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "65%", fig.cap = "Effect of inclusion of irrelevant predictors."}
 # get accuracies after including k irrelevant features
 ks <- c(0, 5, 10, 15, 20, 40)
 fixedaccs <- list()
@@ -1110,7 +1110,7 @@ plt_irrelevant_accuracies <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=accs)) +
               labs(x = "Number of Irrelevant Predictors", 
                    y = "Model Accuracy Estimate") + 
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16), axis.title=element_text(size=16)) 
 
 plt_irrelevant_accuracies
 ```
@@ -1126,12 +1126,12 @@ variables, the number of neighbors does not increase smoothly; but the general t
 Figure \@ref(fig:06-fixed-irrelevant-features) corroborates
 this evidence; if we fix the number of neighbors to $K=3$, the accuracy falls off more quickly.
 
-```{r 06-neighbors-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "60%", fig.cap = "Tuned number of neighbors for varying number of irrelevant predictors."}
+```{r 06-neighbors-irrelevant-features, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "65%", fig.cap = "Tuned number of neighbors for varying number of irrelevant predictors."}
 plt_irrelevant_nghbrs <- ggplot(res) +
               geom_line(mapping = aes(x=ks, y=nghbrs)) +
               labs(x = "Number of Irrelevant Predictors", 
                    y = "Number of neighbors") + 
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 16), axis.title=element_text(size=16)) 
 
 plt_irrelevant_nghbrs
 ```
@@ -1145,7 +1145,7 @@ plt_irrelevant_nghbrs <- ggplot(res_tmp) +
               geom_line(mapping = aes(x=ks, y=accuracy, color=Type)) +
               labs(x = "Number of Irrelevant Predictors", y = "Accuracy") + 
               scale_color_discrete(labels= c("Tuned K", "K = 3")) + 
-  theme(text = element_text(size = 16))
+  theme(text = element_text(size = 16), axis.title=element_text(size=16)) 
 
 plt_irrelevant_nghbrs
 ```
@@ -1373,12 +1373,12 @@ where the elbow occurs, and whether adding a variable provides a meaningful incr
 > part of tuning your classifier, you *cannot use your test data* for this
 > process! 
 
-```{r 06-fwdsel-3, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "60%", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection."}
+```{r 06-fwdsel-3, echo = FALSE, warning = FALSE, fig.retina = 2, out.width = "65%", fig.cap = "Estimated accuracy versus the number of predictors for the sequence of models built using forward selection."}
 fwd_sel_accuracies_plot <- accuracies |>
   ggplot(aes(x = size, y = accuracy)) +
   geom_line() +
   labs(x = "Number of Predictors", y = "Estimated Accuracy")  +
-  theme(text = element_text(size = 18))
+  theme(text = element_text(size = 18), axis.title=element_text(size=18)) 
 
 fwd_sel_accuracies_plot
 ```
